--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "astro": "^5.17.3",
     "gsap": "^3.12.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.22.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-astro": "^1.4.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.0"
   }
 }
